--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,16 @@ body {
 body{
   font-family: 'Fraunces', serif;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
